--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name-color">Md. Rajib</span> Website</h1>
             <h3><span class="h3-color">Professional Web Developer Portfolio</span></h3>
             <p>“Search Engine Optimization is no longer about stuffing keywords and attempting to trick Google into ranking your website. It’s about creating a user experience that is data driven. We know what customers are searching for and we know how to get them to a page. It’s a combination of science and art to successfully rank a website.”</p>
+
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/rajib.png" alt="">
