--- a/index.html
+++ b/index.html
@@ -17,13 +17,42 @@
             <h1>Welcome To</h1>
             <h1><span class="name-color">Md. Rajib</span> Website</h1>
             <h3><span class="h3-color">Professional Web Developer Portfolio</span></h3>
-            <p>“Search Engine Optimization is no longer about stuffing keywords and attempting to trick Google into ranking your website. It’s about creating a user experience that is data driven. We know what customers are searching for and we know how to get them to a page. It’s a combination of science and art to successfully rank a website.”</p>
+            <p> <span class="p-color">“Search Engine Optimization is no longer about stuffing keywords and attempting to trick Google into ranking your website. It’s about creating a user experience that is data driven. We know what customers are searching for and we know how to get them to a page. It’s a combination of science and art to successfully rank a website.”</span></p>
 
             <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/rajib.png" alt="">
         </div>
+    </section>
+
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/ra.png" alt="">
+
+        </div>
+        <div class="half-width">
+            <h1>Dream Area</h1>
+            <h3>Became web developer</h3>
+            <p>Marriott benefited in the last few months from a recovery in international travel but demand in the fourth quarter may not be enough to offset higher expenses due to higher staffing levels and lower non-room revenues.</p>
+
+            <a class="link-button" target="_blank" href="https://github.com/">Go To My GitHub</a>
+
+        </div>
+
+    </section>
+
+    <section class="experience-area">
+        <div class="half-width">
+            <h2>Full Stack Web developer</h2>
+            <h3>2020-Present | pro level web-develop</h3>
+            <p>Marriott benefited in the last few months from a recovery in international travel but demand in the fourth quarter may not be enough to offset higher expenses due to higher staffing levels and lower non-room revenues.</p>
+
+        </div>
+        <div class="half-width">
+
+        </div>
+
     </section>
     
 </body>
