new update pofile

--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
             <p>Marriott benefited in the last few months from a recovery in international travel but demand in the fourth quarter may not be enough to offset higher expenses due to higher staffing levels and lower non-room revenues.</p>
 
             <a class="link-button" target="_blank" href="https://github.com/">Go To My GitHub</a>
-
         </div>
-
     </section>
 
+
     <section class="experience-area">
-        <div class="half-width">
+        <h2><span class="ex-color">Experience</span></h2>
+        <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web developer</h2>
             <h3>2020-Present | pro level web-develop</h3>
             <p>Marriott benefited in the last few months from a recovery in international travel but demand in the fourth quarter may not be enough to offset higher expenses due to higher staffing levels and lower non-room revenues.</p>
-
         </div>
-        <div class="half-width">
+
+        <div id="Nobe-web" class="half-width single-experience">
+            <h2>Nobe Web Developer</h2>
+            <h3>2020-2022 | Progrming Learner</h3>
+            <p>Marriott benefited in the last few months from a recovery in international travel but demand in the fourth quarter may not be enough to offset higher expenses due to higher staffing levels and lower non-room revenues.</p>
 
         </div>
 
